Fix layout issues on phone by actually using the right pure classes

--- a/css/main.css
+++ b/css/main.css
@@ -52,13 +52,13 @@ The content `<div>` is where all your content goes.
   color: #333;
   padding: 2.5em 2em 2em;
   border-bottom: 1px solid #eee;
+  text-align: center;
 }
 .header h1 {
   margin: 0.2em 0;
   font-size: 3em;
   font-weight: 300;
   letter-spacing: normal;
-  text-align: center;
 }
 .header h2 {
   font-weight: 300;
@@ -66,7 +66,6 @@ The content `<div>` is where all your content goes.
   padding: 0;
   margin-top: 0;
   letter-spacing: normal;
-  text-align: center;
 }
 
 .header-text-div {
